--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-./Taxonomy
-./Data/Avicenia_alba/Seqs
-./Data/Sonneratia_alba/Seqs
-./Output/run1
-./Output/run2
-./Output/run3
-./Output/run4
+./Taxonomy/
+./Data/Avicenia_alba/Seqs/
+./Data/Sonneratia_alba/Seqs/
+*ddFs.RDS
+*ddRs.RDS
+*errF.RDS
+*errR.RDS
 .Rproj.user
 .Rhistory
